Started ancestry development.

--- a/index.org
+++ b/index.org
@@ -1,5 +1,5 @@
 * TOWER OF GOD ROLEPLAY
 
-** [[./orgmode/forum.org][Forum]]
+** [[./orgmode/forum.org][Foro]]
 ** [[./orgmode/modalidad.org][Modalidad]]
 ** [[./orgmode/trama.org][Trama]]
