Changed  royal to noble. Started Ancestry implementation.

--- a/orgmode/modalidad.org
+++ b/orgmode/modalidad.org
@@ -7,8 +7,8 @@ Campo basico, mutable.
 *** [[./modalidad/ascendencia.org][Ascendencia]]: 
 Campo basico, inmutable.
     - Regular
+    - Noble
     - Irregular
-    - Real
     - Antigua
 *** Fisiologia: 
 Campo narrativo, mutable.
