--- a/orgmode/modalidad/ascendencia.org
+++ b/orgmode/modalidad/ascendencia.org
@@ -61,14 +61,16 @@ Esto es debido a que existe una alta posibilidad que los descendientes Lo Po Bia
 hereden la posicion especial de Anima; los anima son reconocidos por controlar
 las bestias dependientes del shinsoo y los animales de la torre.
 **** Habilidad: [Descendiente de la Familia Lo Po Bia] 
-     - Obliga al usuario a portar la disciplina de la [Posicion: Anima].
+     - Obliga al usuario a portar la disciplina de la [Posicion: Anima],
+     en cambio, permite un nivel extra en la misma. 
 
 *** DONE Po Bidau 
 La familia Po Bidau son expertas en el manejo del Shinsoo, principalmente con gran precisión.
 Esto los hace principalmente cercanos a la Asociación de Investigación, la cual goza de gran
 prestigio y en caso de no acceder a esta se les expulsa de la casa en sí.
 **** Habilidad: [Descendiente de la Familia Po Bidau] 
-     - Obliga al usuario a portar la disciplina de la [Maestría del Shinsoo].
+     - Obliga al usuario a portar la disciplina de la [Resistencia Shinsoo],
+     en cambio, permite un nivel extra en la misma. 
 
 *** DONE Tu Perie
 La familia Tu Perie desde sus comienzos se ha dedicado al uso de los faros.
@@ -76,7 +78,8 @@ Gracias a los años de experiencia y tener a los mejores en el ámbito, sin
 mucho esfuerzo esta familia fue rápidamente reconocida por sus habilidades
 en convertirse en los usuarios de una posición específica: Portador de la Luz.
 **** Habilidad: [Descendiente de la Familia Tu Perie] 
-     - Obliga al usuario a portar la disciplina de la [Posicion: Portador de la Luz].
+     - Obliga al usuario a portar la disciplina de la [Posicion: Portador de la Luz],
+     en cambio, permite un nivel extra en la misma. 
 
 *** DONE Yeon 
 Los Yeon son una familia matriarcal donde las mujeres son las que toman los roles
