--- a/orgmode/modalidad.org
+++ b/orgmode/modalidad.org
@@ -31,38 +31,39 @@ Campo narrativo, mutable.
 *** Cronologia: 
 Campo narrativo, mutable.
     Descripcion historica para explicar su ascendencia, maximo 10 lineas.
-** Rasgos 
+** Sistema de Batalla 
+***  Rasgos 
    - Los rasgos son aquellos atributos que encasillan a tu personaje, diferenciandolo de otro. 
      Asimismo, los rasgos pueden ir mejorando con el tiempo, y se dividen en rasgos basicos
      (caracteristicas mas visibles) y rasgos avanzados (yendo desde talentos, habilidades,
      hasta los conocimientos profesionales de tu personaje).
-*** Tower Points 
+**** Tower Points 
      - Desde el momento en que se entra a la torre interior, el cuerpo de un regular se va 
      acostumbrando a la alta densidad del shinsoo. Por lo tanto, a medida que se suben los 
      pisos de la torre, el regular va recibiendo "Tower Points" que poder usar en sus rasgos.
-*** Basicos 
-**** Fisico 
+**** Basicos 
+***** Fisico 
      - Fuerza
      - Resistencia
      - Destreza
-**** Social 
+***** Social 
      - Persuasion
      - Compostura
      - Temple
-**** Mental 
+***** Mental 
      - Determinacion
      - Conocimiento
      - Ingenio
-*** Avanzados 
-**** Talentos
-**** Habilidades
-**** Conocimientos
-** Destrezas 
-*** Combat Points 
+**** Avanzados 
+***** Talentos
+***** Habilidades
+***** Conocimientos
+***  Destrezas 
+**** Combat Points 
     El uso de tus tecnicas en batalla te familiariza y ensena muchos matices ocultos sobre
     el arte de la guerra, y estas experiencias son una herramienta clave para mejorar tus
     destrezas de batalla. Cada combate te regala valiosos puntos con los que mejorar.
-*** Especializaciones
+**** Especializaciones
     - Las destrezas son aconglomeraciones muy generales para clasificar los distintos estilos
       de lucha y la gran posibilidad de varianzas que tiene una misma destreza. Por lo tanto, 
       en algunos casos, las destrezas pueden tener varias destrezas "dentro" de la misma. 
@@ -70,7 +71,7 @@ Campo narrativo, mutable.
       una dependiente de la otra. El mas basico ejemplo puede ser la [Maestria en Shinsoo] y sus
       especializaciones: [Baang], [Myun], [Soo] y la importante [Tension].
       Para mas informacion leer [[https://towerofgod.fandom.com/wiki/Shinsoo][aqui]] la seccion llamada Baang, Myun and Soo.
-*** Afinidades
+**** Afinidades
     - Las afinidades del shinsoo son, precisamente, un tipo de destreza que cambian directamente
       la naturaleza, forma y funcion del shinsoo para transformarlo en materia no-viviente; aunque
       se dice que han habido irregulares con una alta maestria para controlar el shinsoo, que han
@@ -87,4 +88,23 @@ Campo narrativo, mutable.
 
       No obstante, que ya haya un listado de afinidades conocidas
       no quiere decir que no puedan existir otras.
-** Cualidades
+***  Cualidades 
+   - Las cualidades del shinsoo son una caracteristica innata de los usuarios
+     dentro de la torre. Las cualidades demuestran claramente la decision y
+     personalidad del usuario, por lo que generalmente se tiene una sola, 
+     y su funcion es mejorar la destreza o afinidad decidida al momento
+     en el que nacio. Unicamente los grandes maestros del shinsoo y high rankers
+     han podido tener mas de una.
+
+**** Cualidad: [Destreza o Afinidad elegida]: 
+    - El usuario elige una destreza o afinidad y se le permitira ponerse dos puntos
+      extra dentro de esa destreza, o uno en la destreza y uno en alguna especializacion, 
+      si es que la destreza tiene alguna rama. 
+** Sistema de Equipo 
+   -
+** Sistema de Objetos 
+   -
+** La Fabrica 
+*** Consumibles
+*** Equipamiento
+*** Miscelanea
