--- a/orgmode/modalidad/rasgos.org
+++ b/orgmode/modalidad/rasgos.org
@@ -14,14 +14,23 @@
 **** Resistencia
 **** Destreza
 *** Social 
-**** Persuasion
-**** Compostura
-**** Temple
+**** Aspecto
+**** Carisma
+**** Negociacion
 *** Mental 
-**** Determinacion
 **** Conocimiento
-**** Ingenio
+**** Percepcion
+**** Voluntad
 ** TODO Avanzados 
-*** Talentos
-*** Habilidades
-*** Conocimientos
+*** Talentos 
+**** Alerta
+**** Combate
+**** Consciencia
+*** Habilidades 
+**** Sigilo
+**** Latrocinio
+**** Supervivencia
+*** Conocimientos 
+**** Politica
+**** Investigacion
+**** Shinsoo
