--- a/orgmode/modalidad.org
+++ b/orgmode/modalidad.org
@@ -35,7 +35,7 @@ Campo narrativo, mutable.
 ** Sistema de Batalla 
    El sistema de progreso esta basado en articulos que se obtienen o mejoran
    a cambio de puntos. Los TP mejoran rasgos y los CP mejoran destrezas.
-   Los rasgos, destrezas y cualidades tienen un maximo de 5 niveles de evolucion.
+   Utilizando TP's o CP's solo se pueden mejorar estas caracteristicas cinco veces.
 *** [[./modalidad/rasgos.org][Rasgos]]
 *** [[./modalidad/destrezas.org][Destrezas]]
 *** [[./modalidad/cualidades.org][Cualidades]]
