Added forum details.

--- a/orgmode/forum.org
+++ b/orgmode/forum.org
@@ -1,1 +1,9 @@
-WELL
+* FORUM
+
+** Informacion basica
+*** Nombre: Genesis RPG
+*** Enlace original: [[./forum/forum.url][https://genesisrpg.foroactivo.com]]
+*** Dominio: ~Pending~
+*** Cuenta Admin 
+    Username: Admin
+    Password: @genesisDX7
